# todo-rust

./: .gitignore  Cargo.toml  README.md
database/: docker-compose.yml
database/docker-init/: database.sql
frontend/: config.html  index.html  login.html  package-lock.json  vite.config.ts
frontend/src/api/: user.tsx
frontend/src/routes/index/: App.tsx
src/: main.rs
src/api/user/: register.rs
