[package]
name = "rust-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
redis = { version = "0.32.3", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
