[package]
name = "rust-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
once_cell = "1.21.3"
redis = { version = "0.32.3", features = ["tokio-comp", "aio"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "v5", "v6", "v7", "v8"] }
